# com_brasper_api

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_transactions.xlsx
app/: main.py  models_registry.py
app/core/containers/: coin.py
app/db/migrations/versions/: 2025_02_1000_00-022_create_home_images_schema_and_table.py  2025_02_1000_00-023_create_home_banner_schema_and_table.py  2025_02_2000_00-024_create_home_popup_schema_and_table.py  2026_02_1800_00-022_create_coin_history_tables.py  2026_02_1805_00-023_create_commission_trial_table.py  2026_02_2000_00-027_drop_tax_rate_history_table.py  2026_02_2000_00-028_drop_commission_history_table.py  2026_02_2200_00-029_alter_account_holder_type_to_social_actor.py  2026_02_2200_00-030_add_social_actor_to_banks.py  2026_02_2300_00-031_bank_account_numeric_to_bigint.py  2026_02_2300_00-032_add_transaction_resultado_total_coupon.py  2026_02_2300_00-033_rename_transaction_columns_to_english.py  2026_02_2300_00-034_transaction_bank_account_origin_destination.py
app/middlewares/: auth.py
app/modules/coin/domain/: models.py
app/modules/coin/infrastructure/: repository.py
app/modules/coin/interfaces/: __init__.py  commission_history_repository.py  (+2 more)
app/modules/home_banner/: __init__.py
app/modules/home_image/: __init__.py
app/shared/services/: __init__.py  file_service.py
docs/: USER_PROFILE_API.md
scripts/: generate_import_excel_template.py  migrate.sh  seed_banks.py  test_import_transaction.py
templates/: plantilla_importacion_transacciones.csv
tests/: conftest.py  test_transactions.py
(+76 files in other folders)
