[tool.poetry]
name = "com-brasper-api"
version = "0.1.0"
description = ""
authors = ["xiomara huamani <101735835+XiomaraHuamani@users.noreply.github.com>"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = {extras = ["email"], version = "^2.11.2"}
alembic = "^1.15.2"
pydantic-settings = "^2.8.1"
db = "^0.1.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
cryptography = "^42.0.0"
argon2-cffi = "^23.1.0"
passlib = "^1.7.4"
bcrypt = "3.2.2"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
fastapi = "^0.115.12"
httpx = "^0.28.1"
greenlet = "^3.0.0"
aiocache = "^0.12.3"
toon-format = { git = "https://github.com/toon-format/toon-python.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.1"
pytest-asyncio = "^0.23.5"
async-asgi-testclient = "^1.4.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
